--- a/parse-webgl2-webidl2.cabal
+++ b/parse-webgl2-webidl2.cabal
@@ -31,7 +31,10 @@ library
   hs-source-dirs:
       src
   build-depends:
-      base >=4.7 && <5
+      aeson
+    , base >=4.7 && <5
+    , text
+    , turtle
   default-language: Haskell2010
 
 executable parse-webgl2-webidl2-exe
@@ -42,8 +45,11 @@ executable parse-webgl2-webidl2-exe
       app
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      aeson
+    , base >=4.7 && <5
     , parse-webgl2-webidl2
+    , text
+    , turtle
   default-language: Haskell2010
 
 test-suite parse-webgl2-webidl2-test
@@ -55,6 +61,9 @@ test-suite parse-webgl2-webidl2-test
       test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      aeson
+    , base >=4.7 && <5
     , parse-webgl2-webidl2
+    , text
+    , turtle
   default-language: Haskell2010
