--- a/parse-webgl2-webidl2.cabal
+++ b/parse-webgl2-webidl2.cabal
@@ -24,6 +24,8 @@ source-repository head
   location: https://github.com/githubuser/parse-webgl2-webidl2
 
 library
+  exposed-modules:
+      Json.Parser
   other-modules:
       Paths_parse_webgl2_webidl2
   hs-source-dirs:
