Outsource the option functions

--- a/parse-webgl2-webidl2.cabal
+++ b/parse-webgl2-webidl2.cabal
@@ -25,6 +25,7 @@ source-repository head
 
 library
   exposed-modules:
+      Json.Options
       Json.Parser
   other-modules:
       Paths_parse_webgl2_webidl2
