--- a/parse-webgl2-webidl2.cabal
+++ b/parse-webgl2-webidl2.cabal
@@ -34,6 +34,8 @@ library
   build-depends:
       aeson
     , base >=4.7 && <5
+    , bytestring
+    , pretty-simple
     , text
     , turtle
   default-language: Haskell2010
@@ -48,7 +50,9 @@ executable parse-webgl2-webidl2-exe
   build-depends:
       aeson
     , base >=4.7 && <5
+    , bytestring
     , parse-webgl2-webidl2
+    , pretty-simple
     , text
     , turtle
   default-language: Haskell2010
@@ -64,7 +68,9 @@ test-suite parse-webgl2-webidl2-test
   build-depends:
       aeson
     , base >=4.7 && <5
+    , bytestring
     , parse-webgl2-webidl2
+    , pretty-simple
     , text
     , turtle
   default-language: Haskell2010
